2008-02-28  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/custom_actor/Makefile.am: distcheck fixes.
	* docs/tutorial/clutter-tut.xml: Actor sections: Mention the anchor 
	point.
	Effects section: Show the AlphaFunc diagram from the API reference.
	Behaviour section: Show the AlphaFunc+Path diagram from the API 
	reference.
	* docs/tutorial/figures/Makefile.am: Added the diagrams from 
	the API reference.

2008-02-28  Murray Cumming,,,  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/custom_actor/Makefile.am:

2008-02-28  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct some mentions of widgets to 
	mentions of actors.
	Custom Actor section: Explain pick().
	Custom Container section: Say what the example does and say what a 
	real container should probably offer.
	* examples/custom_actor/triangle_actor.c: 
	* examples/custom_container/examplebox.c: Implement pick().

2008-02-27  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom containers section: 
	Mention that pick() should pick each of its children, and refer to 
	the Custom Actor section for more details. However, I do not actually 
	have those details yet.

2008-02-26  Murray Cumming, <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom containers section:
	Mentioned overriding ClutterActor::paint() to paint children.
	* docs/tutorial/figures/Makefile.am: Added a screenshot of the custom 
	container.
	* examples/custom_container/examplebox.c: Do not implement 
	ClutterActor::pick() because it is not necessary for a simple example.

2008-02-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Custom Containers section:
	mention vfuncs for doing layout of children.
	* examples/custom_container/examplebox.c:
	(example_box_query_coords), (example_box_request_coords),